ColumnView notifies for contentChildren when page is removed

BUG: 452883